# egemma

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  loc.yml
ci/: miri_sb.sh  miri_tb.sh  sanitizer.sh
examples/: embed_text.rs
src/: embedding.rs  error.rs  lib.rs  options.rs  session.rs  text_enc.rs
src/simd/: mod.rs  neon.rs  scalar.rs  x86.rs
tests/: integration.rs
